# synthetiq-redact

./: .env.example  .gitignore  ADVANCED_UPGRADE_PLAN.md  CONTRIBUTING.md  README.md  README_v2.md  RELEASE_NOTES.md  SECURITY.md  launch-synthetiq-redact-app.ps1  launch-synthetiq-redact-app.vbs  launch-synthetiq-redact-desktop.ps1  launch-synthetiq-redact-desktop.vbs  setup_v2.sh  start-all.bat  start-all.ps1  start-backend.bat  start-backend.ps1  start-frontend.bat  start-frontend.ps1
backend/: .env.example  audit.py  audit_v2.py  classification.py  config.py  database.py  database_v2.py  document_exports.py  evaluate_handwriting_product.py  evaluate_redaction_geometry.py  evaluate_redaction_text.py  glm_ocr_engine.py  handwriting_transcription.py  image_redaction_detector.py  llm_engine.py  main.py  main_v2.py  models.py  models_v2.py  ner_engine.py  ocr_engine.py  ocr_engine_v2.py  pipeline.py  preprocessing.py  provenance.py  redaction.py  redaction_geometry_mapper.py  redaction_profiles.py  requirements.txt  sentiment_urgency.py  translation.py  vision_verifier.py  watermark.py
dataset_text_prompts/: README.md  SUMMARY.json  dataset_text.md  document_index.json  document_index.jsonl  prompt_manifest.jsonl
docs/: HANDWRITING_DATA_STRATEGY.md  OCR_EVALUATION_METHODOLOGY.md  OCR_MODEL_CARD_TEMPLATE.md  OCR_TRAINING_PLAN.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PHONE_SCANNER_PLAN.md  ROADMAP.md  (+2 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+256 files in other folders)
