[package]
name = "synthetiq-redact"
version = "3.1.0"
description = "Synthetiq Redact desktop"
authors = ["Synthetiq"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
